# fcs

./: .gitignore  .travis.yml  LICENSE  README.md  ahrs-todo.txt  io_budget.txt  state.txt
c6657-norwriter/docs/: README.txt
c6657-norwriter/evmc6657l/: .ccsproject  .cproject  .project  NORWriterC6657.ccxml  linker.cmd  macros.ini_initial
c6657-norwriter/include/: cslr.h  cslr_device.h  cslr_spi.h  tistdtypes.h  types.h
c6657-norwriter/src/: norwriter.c  spi-flash.c  spi-flash.h
cpld/: c66x_sequencer.v  cdce62002_program.v  cpld_top.v  cpuboard_test.qpf  cpuboard_test.qsf  cpuboard_test.qws  cpuboard_test.sdc  exynos4412_sequencer.v  pmbus_passthrough.v
cpld/db/: cpuboard_test.db_info
cpu/: debayer.cpp  fcsdump  fcsdump.c  fcsdump.service  iodump.c  measdump.c  measdump.service  plog.py  search.py  search2.py  usbdump.c
fcs/: .ccsproject  .cproject  .project  main.c
fcs/TRICAL/: TRICAL.lib
fcs/ahrs/: ahrs.c  ahrs.h  measurement.c  measurement.h  wmm.c  wmm.h  wmm2010_coeff.h
fcs/board/: board.h  cpuboard.gel  emif-uart.c  emif-uart.h  int-uart.c  int-uart.h  linker.cmd
fcs/c66x-csl/: ti.csl.ae66  ti.csl.intc.ae66
fcs/c66x-csl/ti/csl/: Settings.h  csl.h  csl_bootcfg.h  csl_bootcfgAux.h  csl_bwmngmt.h  csl_bwmngmtAux.h  csl_cache.h  csl_cacheAux.h  csl_cgem.h  csl_cgemAux.h  csl_chip.h  csl_chipAux.h  csl_cpIntc.h  csl_cpIntcAux.h  csl_cppi.h  csl_edma3.h  csl_edma3Aux.h  csl_emac.h  csl_emacAux.h  csl_emif4f.h  csl_emif4fAux.h  csl_error.h  csl_gpio.h  csl_gpioAux.h  csl_idma.h  csl_idmaAux.h  csl_ipc.h  csl_ipcAux.h  csl_mdio.h  csl_memprot.h  csl_memprotAux.h  csl_mpu.h  csl_mpuAux.h  csl_msmc.h  csl_msmcAux.h  csl_pllc.h  csl_pllcAux.h  csl_psc.h  csl_pscAux.h  csl_qm_queue.h  (+70 more)
fcs/ccs-scripts/: Makefile  b2ccs.c  b2i2c.c  bconvert64x.c  bootbuild.c  byteswapccs.c  ccs2bin.c  cpuboard.gel  hex-Debug.cmd  hex-Release.cmd  linker.cmd  make-btbl.rmd  spi-Debug.map  spi-Release.map  tiboot.h  types.h
fcs/ccs-scripts/romparse/: Makefile  cdefdep  lex.yy.c  romparse.c  romparse.h  rparse.flex  rparse.tab.c  rparse.tab.h  rparse.y  tiboot_c66x.h  tiboot_types.h  types.h
fcs/comms/: calibration.c  command.c  comms.c  comms.h  config.c  gcs.c  log.c  path.c  state.c  state.h  status.c  waypoint.c
fcs/config/: config.c  config.h
fcs/control/: control.c  control.h  dubins.c  figure-eight.c  linear.c  release.c  trajectory.c  trajectory.h
fcs/drivers/: i2c-eeprom.c  i2c-eeprom.h  peripheral.c  peripheral.h  stream.c  stream.h
fcs/exports/: calibration.c  calibration.h  exports.c  exports.h  log.c  log.h  parameter.c  parameter.h
fcs/hardware/: board.h  cpuboard.gel  emif-uart.c  emif-uart.h  ft232h.c  ft232h.h  int-uart.c  spi-flash.c  spi-flash.h
fcs/hardware/core/: c6657.c  cpuv1-ioboardv1.c
fcs/hardware/platform/: control-hitl.c  cpuv1-ioboardv1.c  log-replay.c
fcs/nmpc/: cnmpc.h  config.h  nmpc.c  nmpc.h  nmpc.lib
fcs/piksi/: piksi.c  piksi.h
fcs/stats/: stats.c  stats.h
fcs/test/: CMakeLists.txt  benchmark.py  controllog.py  dynamics.conf  estimate.py  fcs.py  gcsconsole.py  hitl.py  integration_driver.py  kmlview.py  mlog-replay.py  plog.py  sitl.py  splitlog.py  test.h  test_ahrs.cpp  test_comms.cpp  test_control.cpp  test_exports.cpp  test_hardware.cpp  test_log.cpp  test_parameter.cpp  test_piksi.cpp  test_stream.cpp  test_util.cpp  test_wmm.cpp  videoview.py  xplaneview.py
fcs/ukf/: cukf.h  ukf.lib
fcs/util/: 3dmath.h  base64.c  cobsr.c  crc16sbp.c  crc32.c  crc8.c  util.c  util.h
ucd9222/: cpuboard_ucd9222.xml
